K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    name: ingress-srv
    annotations: 
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
    rules:
        - host: taxiapp.com
          http: 
            paths: 
              - path: /api
                pathType: Prefix 
                backend:
                    service:
                        name: identity-clusterip-srv
                        port: 
                            number: 80
